styles.css
/** @format */

@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins:wght@500&family=Roboto:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Cormorant+Garamond:wght@300&family=Crete+Round:ital@0;1&family=Dancing+Script:wght@500;600;700&family=Inter:wght@100;200;300;400&family=Mukta:wght@200&family=Permanent+Marker&family=Poppins:ital,wght@0,100;1,100&family=Redressed&family=Roboto:wght@100&family=Signika:wght@300;400;500;600;700&family=Space+Grotesk:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Cormorant+Garamond:wght@300&family=Crete+Round:ital@0;1&family=Dancing+Script:wght@500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Mukta:wght@200&family=Permanent+Marker&family=Poppins:ital,wght@0,100;1,100&family=Redressed&family=Roboto:wght@100&family=Signika:wght@300;400;500;600;700&family=Space+Grotesk:wght@300&display=swap");

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 40px;
  background-color: #3c3a39;
  color: white;
}

.form button {
  color: white;
  font-size: 17px;
  font-weight: 700;
  width: 131px;
  height: 48px;
  background: #ff6b00;
  padding: 12px;
  border: none;
  font-family: "Inter", sans-serif;
}

.socials a {
  text-decoration: none;
  color: #505f79;
}

.form-ul li {
  list-style: none;
  padding-bottom: 40px;
}

* {
  margin: 0;
  padding: 0;
}

.heading {
  font-family: "Roboto", sans-serif;
  text-decoration: none;
  color: white;
  margin-left: 15px;
  font-size: 18px;
  font-weight: 700;
}

.nav-ul {
  align-items: flex-start;
  list-style: none;
  display: none;
  flex-direction: column;
  background-color: #3c3a39;
  width: 375px;
  height: 570px;
  z-index: 100;
  position: absolute;
  left: 0;
  padding-top: 110px;
  bottom: 0%;
  top: 0%;
  overflow: hidden;
}

.nav-ul.active {
  display: flex;
}

#envelope {
  display: none;
  z-index: 200;
}

.nav-ul li {
  padding-left: 35px;
  margin-bottom: 40px;
  margin-left: 15px;
  padding-bottom: 15px;
  width: 100%;
  border-bottom: 1px solid gray;
}

.nav-ul li a {
  color: #fff5e1;
  text-decoration: none;
  font-size: 32px;
  padding-top: 40px;
  font-weight: 700;
  line-height: 44px;
}

#humb {
  display: block;
  padding-right: 20px;
  z-index: 100000;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  transition: all 0.3s ease-in-out;
  background-color: white;
  -webkit-transition: all 0.3s ease-in-out;
}

#humb.active .bar:nth-child(2) {
  opacity: 0;
}

#humb.active .bar:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}

#humb.active .bar:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

.main {
  display: flex;
  flex-direction: column;
  padding: 15px;
  color: white;
  height: 40vh;
  background-color: #1c1a19;
  background-image: url(images/bg.png);
  background-position: bottom;
  background-position: 100% 100%;
  background-repeat: no-repeat;
}

.main h1 {
  margin-top: 90px;
  color: #ff6b00;
  font-family: "Crete Round", serif;
  font-style: normal;
  font-weight: 400;
  font-size: 56px;
}

.main h4 {
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
}

.main p {
  flex-wrap: wrap;
  margin-top: 10px;
  margin-right: 10px;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 16px;
}

.main ul {
  margin-top: 20px;
  display: flex;
  justify-content: flex-start;
  text-align: center;
  opacity: 0;
  animation-name: opacity;
  animation-duration: 1s;
  animation-delay: 2s;
  animation-fill-mode: forwards;
}

@keyframes opacity {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.main ul li {
  color: black;
  list-style-type: none;
  padding-right: 17px;
}

.main ul li a {
  color: white;
  list-style-type: none;
}

.work-section {
  display: grid;
  margin-left: 24px;
}

.work-section h1 {
  text-align: center;
  font-family: "Crete Round", serif;
  font-weight: 400;
  font-size: 40px;
  line-height: 52px;
  padding-bottom: 40px;
  margin-right: 20px;
  margin-top: 120px;
  margin-bottom: 80px;
  border-bottom: 1px solid black;
}

.img-container h2 {
  font-family: "Crete Round", serif;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  margin-top: 24px;
  margin-bottom: 12px;
}

.img-container p {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-right: 40px;
}

.img-container ul {
  display: flex;
}

.img-container ul li {
  margin-top: 10px;
  list-style: none;
  color: black;
  padding: 12px 10px;
  margin-right: 15px;
  border: 1px solid black;
}

.img-container ul li a {
  text-decoration: none;
  margin: 5px;
  color: #091e42;
  font-family: "Inter", sans-serif;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
}

.img-container button {
  border: none;
  background-color: #ff6b00;
  margin: 12px;
  width: 124px;
  height: 48px;
  color: white;
  font-family: "Inter", sans-serif;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
}

.img-container button:hover {
  background-color: antiquewhite;
  color: #ff6b00;
  border: 1px solid #ff6b00;
}

.cards {
  display: grid;
  justify-content: center;
  align-items: center;
  margin-bottom: 120px;
  margin-left: 24px;
  margin-right: 24px;
}

.card-body {
  display: flex;
  flex-direction: column;
  height: 386px;
  justify-content: center;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(./images/image5.png);
}
/* ... */

